# mouth-singing

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  amnezia_config.vpn  conftest.py  docker-compose.api.yml  docker-compose.gpu.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  master-promt.md  tracks_search.csv
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  logging_config.py  main.py  middleware.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf  rec-service.Dockerfile  worker-api.Dockerfile  worker-gpu.Dockerfile
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
journals/: ADR.md  ARCHITECTURE.md  BUSINESS_CUSTOMER.md  CURRENT_HIT_PLAN.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_PLAN.md  PHASES.md  PROJECT_LOG.md  RECOMMENDATIONS_REVIEW.md  RECOMMENDATIONS_V2_BRAINSTORM.md  THESIS.md  THESIS_PLAN.md  THESIS_REQUIREMENTS.md  WORKER_AUDIT.md  WORKER_FACTS.md  WORKER_FLOW.md  WORKER_IMPROVEMENTS.md  upload-components.md  upload-sequence-rec.md  upload-sequence-worker.md  upload-sequence.md
keys/: genius.txt  mvsep-test-key.txt  open-ai-test-key.txt
m3_test/: PLAN.md  PLAN_PREPARE_DATA.md  PLAN_VARIANT2.md  PLAN_VARIANT3.md  README.md  RESULTS.md
rec-service/: pyproject.toml
rec-service/app/: api.py  config.py  consumer.py  indexer.py  main.py  recommendation_engine.py  schemas.py
scripts/: bootstrap_worker.py  cluster_catalog.py  create_mood_tags.py  download_mp3s.py  enrich_qdrant_payloads.py  export_catalog_data.py  fetch_artist_images.py  find_tracks_for_artists.py  generate_alignment_fixtures.py  grab_mp3_links.py  import_media_to_minio.py  migrate_qdrant_rec_cluster.py  migrate_sqlite_to_pg.py  parse_karaoke_charts.py  seed_catalog.py  verify_s3_refs.py
searxng/: settings.yml
shared/: pyproject.toml
shared/karaoke_shared/: __init__.py  constants.py
shared/karaoke_shared/alignment/: __init__.py  document.py
shared/karaoke_shared/messaging/: __init__.py  rabbitmq.py
shared/karaoke_shared/ml/: feature_extractor.py  lyric_embedder.py  rec_cluster_assigner.py
shared/karaoke_shared/models/: __init__.py  alignment.py  artist.py  auto_repair.py  catalog_cluster.py  job.py  mood_tag.py  queue.py  recommendation.py  session.py  track.py
shared/karaoke_shared/repositories/: __init__.py  pg_repository.py  qdrant_repository.py  sqlite_repository.py
shared/karaoke_shared/services/: job_service.py  progress_publisher.py
shared/karaoke_shared/storage/: __init__.py  s3_storage.py
shared/karaoke_shared/utils/: line_breaker.py  syllabifier.py  vector.py
tests/: conftest.py  test_alignment_document.py  test_api_queue.py  test_api_sessions.py  test_api_tracks.py  test_artists.py  test_audio_pipeline.py  test_clustering.py  test_e2e_scenarios.py  test_feature_extractor.py  test_job_service.py  test_lyric_embedder.py  test_models.py  test_mood_tags.py  test_pg_repository_jobs.py  test_popularity.py  test_progress_publisher.py  test_rabbitmq_client.py  test_recommendation_service.py  test_s3_storage.py  test_sonoix_client.py  test_sqlite_repo.py  test_sse.py  test_syllabifier.py
v2/: .env.example  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
v2/bootstrap/: Dockerfile  pyproject.toml
v2/bootstrap/app/: __init__.py  bootstrap_runner.py  cli.py  remote_syncer.py
v2/bootstrap/app/pipeline/: __init__.py  lrclib_dump.py  lrclib_http_adapter.py  lrclib_sqlite_adapter.py  mvsep_separator.py  uvr_separator.py  whisperx_transcriber.py
v2/bootstrap/tools/: init-qdrant.py  lrclib_server.py  run-bootstrap.sh  run-gpu-server.sh  setup-worker.sh
v2/shared/: pyproject.toml
v2/shared/karaoke_shared/: __init__.py
v2/shared/karaoke_shared/ml/: feature_extractor.py
v2/shared/karaoke_shared/models/: job.py  play_history.py  queue.py
v2/shared/karaoke_shared/repositories/: qdrant_repository.py  sqlite_repository.py
v2/shared/karaoke_shared/utils/: syllabifier.py
v2/worker/: Dockerfile  entrypoint.sh  pyproject.toml
v2/worker/app/: config.py  main.py
v2/worker/app/pipeline/: audio_pipeline.py  sonoix_client.py  uvr_separator.py  video_generator.py
v3-rc1/: PLAN.md  docker-compose.prod.yml  docker-compose.yml
v3-rc1/backend/: pyproject.toml
v3-rc1/backend/app/: dependencies.py  main.py
v3-rc1/backend/app/api/v1/: health.py
v3-rc1/backend/app/services/: queue_service.py  recommendation_service.py
v3-rc1/worker/: Dockerfile  pyproject.toml
v3-rc1/worker/app/pipeline/: audio_pipeline.py  uvr_separator.py  whisper_transcriber.py
v3-rc1/worker/tests/: conftest.py  test_audio_pipeline.py  test_ctc_aligner.py  test_lyrics_searcher.py  test_vad_processor.py  test_whisper_transcriber.py
v3-rc1/worker/tools/: download_models.py  smoke_test.py
v3-rc2/: .env.example  PLAN.md  backend  docker-compose.prod.yml  docker-compose.yml  frontend  shared
v3-rc2/worker/: Dockerfile  entrypoint.sh  pyproject.toml
v3-rc2/worker/app/: config.py  main.py
v3-rc2/worker/app/pipeline/: ctc_aligner.py  mvsep_client.py  vad_processor.py  whisper_client.py
v3-rc2/worker/app/utils/: retry.py
worker/: Dockerfile  entrypoint.sh  pyproject.toml
worker/api/: api_pipeline.py  mvsep_client.py  openai_embedder.py
worker/app/: config.py  consumer.py  main.py
worker/app/pipeline/: audio_pipeline.py  sonoix_client.py  uvr_separator.py  video_generator.py
worker/bootstrap/: pipeline.py
worker/common/: alignment_auto_repair.py  base_pipeline.py  ctc_aligner.py  ctc_subprocess.py  lyrics_agent.py  lyrics_searcher.py  phrase_locator.py  segment_builder.py  vad_processor.py
worker/common/lyrics/: __init__.py  base_provider.py  filename_parser.py  fragments.py  provider_chain.py  verifier.py
worker/common/lyrics/matching/: __init__.py  asr_filter.py  expander.py  linguistics.py  matcher.py  normalizer.py  scorer.py
worker/common/lyrics/providers/: chartlyrics.py  genius.py  lrclib.py  lyricsovh.py  simpmusic.py
worker/gpu/: back_vocal_separator.py  gpu_pipeline.py  torch_ctc_aligner.py  uvr_separator.py  whisper_transcriber.py
(+210 files in other folders)
