[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karaoke-rec-service"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "karaoke-shared[ml]",
    "asyncpg>=0.29",
    "aio-pika>=9.4",
    "structlog>=24.0",
    "pydantic-settings>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
