[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karaoke-shared"
version = "0.1.0"
description = "Shared models and interfaces for the karaoke application"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["karaoke_shared*"]
