[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karaoke-shared"
version = "0.1.0"
description = "Shared models and interfaces for the karaoke application"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "asyncpg>=0.29",
    "qdrant-client>=1.8",
    "pyphen>=0.16",
    "structlog>=24.0",
    "boto3>=1.34",
    "aio-pika>=9.4",
]

[project.optional-dependencies]
ml = [
    "librosa>=0.10",
    "numpy>=1.24",
    "sentence-transformers>=2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["karaoke_shared*"]
