[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karaoke-worker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20",
    "structlog>=24.0",
    "pydantic-settings>=2.0",
    "audio-separator>=0.20",
    "karaoke-shared",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
