[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karaoke-worker"
version = "3.1.0"
requires-python = ">=3.10"
dependencies = [
    # Core runtime
    "asyncpg>=0.29",
    "structlog>=24.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "karaoke-shared",

    # CTC forced alignment (common to both modes)
    "ctc-forced-aligner==1.0.2",
    "unidecode>=1.3",

    # Audio: VAD + feature extraction (common to both modes)
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.24",

    # Lyrics agent (DeepSeek via OpenAI SDK + scraping)
    "openai>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",

    # Lyrics matching (algorithmic ASR↔candidate scoring)
    "pymorphy3==2.0.4",
    "pymorphy3-dicts-ru==2.4.417150.4580142",
    "snowballstemmer==2.2.0",
    "jellyfish==1.1.0",
    "rapidfuzz==3.10.1",
]

[project.optional-dependencies]
gpu = [
    # UVR local separation (BS-Roformer)
    "audio-separator>=0.24",
    # Local lyric embedder
    "sentence-transformers>=2.2,<3",
    "transformers<5",
]
# api mode has no extra deps beyond the base list:
# httpx covers all HTTP calls; OpenAI embedder uses httpx too.
api = []

# The worker/ directory contains the source for the 'worker' package.
# We install from the project root (one level up), where 'worker' is a
# top-level package directory.  Docker build context is always the project root.
[tool.setuptools.packages.find]
where = [".."]
include = ["worker*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
