[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karaoke-bootstrap"
version = "0.1.0"
description = "Bootstrap CLI for mass-processing MP3 files into karaoke tracks"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "tqdm>=4.66",
    "structlog>=24.1",
    "karaoke-shared[ml]",
]

[project.optional-dependencies]
whisperx = ["whisperx", "torch", "torchaudio"]

[project.scripts]
karaoke-bootstrap = "app.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
