[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karaoke-shared"
version = "0.1.0"
description = "Shared models and interfaces for the karaoke application"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.20",
    "qdrant-client>=1.8",
    "pyphen>=0.16",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["karaoke_shared*"]
