[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karaoke-backend"
version = "0.1.0"
description = "FastAPI backend for the karaoke application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "qdrant-client>=1.8",
    "structlog>=24.0",
    "httpx",
    "python-multipart>=0.0.9",
    "karaoke-shared",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
semantic = [
    "sentence-transformers>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app" = ["db/*.sql"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
