[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karaoke-worker"
version = "3.0.0"
requires-python = ">=3.11"
dependencies = [
    # Core
    "aiosqlite>=0.20",
    "structlog>=24.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "karaoke-shared",

    # UVR (BS-Roformer support)
    "audio-separator>=0.24",
    "onnxruntime-gpu>=1.18",

    # ASR
    "faster-whisper==1.0.3",
    "ctranslate2==4.4.0",

    # Audio processing
    "soundfile>=0.12.1",

    # Lyrics scraping (Genius)
    "beautifulsoup4>=4.12",
    "lxml>=5.0",

    # CTC alignment
    "ctc-forced-aligner==1.0.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
