[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karaoke-worker-v3rc2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # Core (from v3-rc1)
    "aiosqlite>=0.20",
    "structlog>=24.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "karaoke-shared",

    # CTC forced alignment (from v3-rc1)
    "ctc-forced-aligner==1.0.2",

    # Audio: VAD + feature extraction (from v3-rc1)
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.24",

    # LyricsSearcher scraping (from v3-rc1)
    "beautifulsoup4>=4.12",
    "lxml>=5.0",

    # Lyric embedder (local variant, from v3-rc1)
    "sentence-transformers>=2.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
